--- a/css/main.css
+++ b/css/main.css
@@ -2281,7 +2281,8 @@ body {
   right: 0;
   width: 50%;
   height: 100%;
-  background: url(../img/story-bg.jpg) no-repeat center center/cover;
+  /* background: url(../img/story-bg.jpg) no-repeat center center/cover; */
+  background: url(../img/aesthetic-water.jpg) no-repeat center center/cover;
   z-index: 1;
 }
 
